# sfml-games-collection

./: .gitignore  CMakeLists.txt  README.md
Game1/: CMakeLists.txt  Game1.cpp  README-Game1.md
Game2/: Ball.cpp  Ball.hpp  CMakeLists.txt  Main.cpp  Player1.cpp  Player1.hpp  Player2.cpp  Player2.hpp  README-Game2.md
Game3/: Bullet.cpp  Bullet.hpp  CMakeLists.txt  CreateBackground.cpp  CreateHaunting.cpp  Ghost.cpp  Ghost.hpp  GhostArena.hpp  Graveyard.cpp  Graveyard.hpp  Main.cpp  Pickup.cpp  Pickup.hpp  Player.cpp  Player.hpp  README-Game3.md  TextureHolder.cpp  TextureHolder.hpp
Game4/: Animator.cpp  Animator.hpp  BackgroundGraphics.cpp  BackgroundGraphics.hpp  BeeProjectileGraphics.cpp  BeeProjectileGraphics.hpp  BeeProjectileUpdate.cpp  BeeProjectileUpdate.hpp  ButterflyGraphics.cpp  ButterflyGraphics.hpp  CMakeLists.txt  CameraGraphics.cpp  CameraGraphics.hpp  CameraUpdate.cpp  CameraUpdate.hpp  Component.hpp  Factory.cpp  Factory.hpp  ForegroundGraphics.cpp  ForegroundGraphics.hpp  GameObject.cpp  GameObject.hpp  Graphics.cpp  Graphics.hpp  InputDispatcher.cpp  InputDispatcher.hpp  InputReceiver.cpp  InputReceiver.hpp  LevelUpdate.cpp  LevelUpdate.hpp  Main.cpp  MenuGraphics.cpp  MenuGraphics.hpp  MenuUpdate.cpp  MenuUpdate.hpp  MushroomPerilGraphics.cpp  MushroomPerilGraphics.hpp  MushroomPerilUpdate.cpp  MushroomPerilUpdate.hpp  PlatformGraphics.cpp  (+22 more)
